# openstreetmap-calendar

./: .csslintrc  .dockerignore  .envrc  .git-blame-ignore-revs  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  Pipfile  Procfile  README.md  devbox.json  fly.toml  manage.py  process-compose.yml  pyproject.toml  requirements.txt  run.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  start-message.text
.github/: FUNDING.yml
.github/workflows/: main.yml  test.yml
.zed/: settings.json
osmcal/: forms.py  ical.py  managers.py  models.py  oauth.py  osmuser.py  serializers.py  settings.py  tasks.py  test_dateformat.py  test_feeds.py  test_ical.py  test_views.py  urls.py  views.py  widgets.py  wsgi.py
osmcal/api/: compatserializers.py  compatviews.py  decorators.py  serializers.py  test_views.py  urls.py  views.py
osmcal/api/schema/: api-v2.2.yaml  generate.sh
osmcal/community/: forms.py  models.py  urls.py  views.py
osmcal/community/migrations/: 0001_initial.py  0002_auto_20200524_1312.py  0003_auto_20200916_1417.py
osmcal/fixtures/: demo.yaml
osmcal/middlewares/: replay_middleware.py
osmcal/migrations/: 0001_initial.py  0002_auto_20190511_0926.py  0003_auto_20190511_0954.py  0004_auto_20190512_1620.py  0005_event_description.py  0006_auto_20190731_1340.py  0007_event_location_text.py  0008_auto_20190801_0800.py  0009_eventparticipation.py  0010_auto_20191010_1907.py  0011_event_location_name.py  0012_auto_20191019_1005.py  0013_remove_event_created_by.py  0014_auto_20200201_1440.py  0015_auto_20200215_1726.py  0016_auto_20200221_1643.py  0017_remove_eventparticipation_answers.py  0018_auto_20200221_1810.py  0019_auto_20200222_1056.py  0020_eventparticipation_added_on.py  0021_auto_20200223_1808.py  0022_event_cancelled.py  0023_user_primary_key.py  0024_auto_20200516_1213.py  0025_auto_20200524_1312.py  0025_auto_20200917_1515.py  0026_auto_20200524_1312.py  0026_event_timezone.py  0027_timezone_data.py  0028_user_home_location.py  0029_alter_event_description.py  0030_alter_eventparticipation_unique_together.py  0031_event_hidden.py  0032_user_is_moderator.py  0033_user_is_banned.py  0034_auto_20200524_1312.py
osmcal/social/: __init__.py  apps.py  mastodon.py  post.py  twitter.py
osmcal/static/: api.html
osmcal/static/osmcal/: event-form.css  style-mobile.css  style.css  survey-form.css  survey-form.js  timezone-widget.js
osmcal/templates/: 400.html  404.html  500.html  base.html
osmcal/templates/osmcal/: date-base.txt  date-short-base.txt  date-short.l10n.txt  date-short.txt  (+13 more)
osmcal/templatetags/: locadate.py  markdown.py  schema.py  tabless.py
postgres/: flake.nix
(+19 files in other folders)
