[tool.black]
line-length = 120
target-version = ['py39']
extend-exclude = 'osmcal/migrations'

[tool.pyright]
venvPath = "."
venv = ".venv"

[project]
authors = [{ name = "Thomas Skowron", email = "th@skowron.eu" }]
license = { text = "APACHE 2.0" }
requires-python = "<4.0,>=3.8"
dependencies = [
    "psycopg2-binary~=2.8",
    "requests~=2.32",
    "requests-oauthlib~=1.2",
    "django-leaflet~=0.27",
    "Django~=3.2",
    "Markdown~=3.2",
    "bleach~=3.3",
    "gunicorn~=22.0",
    "python-dotenv~=0.14",
    "sentry-sdk~=2.8",
    "django-prometheus~=2.0",
    "timezonefinder~=6.0",
    "Babel~=2.9",
    "django4-background-tasks~=1.2.10",
]
name = "openstreetmap-calendar"
version = "2.2.0"
description = ""
package-mode = false

[dependency-groups]
dev = ["PyYaml~=6.0", "pylint", "black~=24.3.0"]
